Fix text and svg alignment

--- a/my-app/src/projects/Projects.css
+++ b/my-app/src/projects/Projects.css
@@ -82,6 +82,8 @@
     border-radius: 15px;
     padding: 5px 15px;
     font-weight: 500;
+    display: flex;
+    align-items: center;
 }
 
 #more-images:hover {
